<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DroneSnapStartScreenActivity"
    android:orientation="vertical"
    android:measureWithLargestChild="false"
    android:layout_gravity="center_vertical">

    <TextView android:text="@string/start_screen_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/logo_tv"
        android:textSize="60sp"
        android:layout_weight="0.43"
        android:textAlignment="center"
        android:layout_gravity="center_vertical|center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:textAlignment="center"
        android:layout_gravity="center_vertical|center"
        android:src="@drawable/drone_snap_icon"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_name_etLabel"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/flight_name_et"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delayed_start_etLabel"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delayed_start_et"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="2"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_lapse_etLabel"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_lapse_et"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="6"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_btn"
        android:id="@+id/start_btn"
        android:height="50dp"
        android:layout_gravity="bottom" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_settings_btn"
        android:id="@+id/server_settings_btn" />
</LinearLayout>
